# athena

./: .gitignore  ADVANCED_FEATURES_PLAN.md  CLAUDE.md  COMPLETED_IMPLEMENTATION_STRATEGY.md  Cargo.toml  DOCUMENTATION_GUIDE.md  EFFICIENT_IMPLEMENTATION_STRATEGY.md  EXAMPLES_STATUS.md  FIXES_SUMMARY.md  FUTURE_ENHANCEMENTS.md  IMPLEMENTATION_STATUS.md  IMPROVEMENT_PLAN.md  MULTI_AGENT_EXTENSION_PLAN.md  MULTI_AGENT_PROGRESS_SUMMARY.md  PROJECT_STATUS.md  README.md  TEST_SUMMARY.md  WINDOWS_SETUP.md  agenda.txt  benchmark_results.md  build.rs  build_wasm.sh  grid_navigator_v2.agent  setup.py  symbols.txt  test_windows_build.bat  test_windows_minimal.bat  verify_setup.sh
benches/: algorithm_comparison.rs  cartpole_benchmark.rs
docs/: README.md  WINDOWS_SETUP.md  algorithms_guide.md  best_practices.md  index.md  performance_guide.md  tutorial_advanced.md  tutorial_getting_started.md
docs/gpu/: GPU_IMPLEMENTATION_SUMMARY.md  GPU_INVESTIGATION.md  INTEL_ARC_GPU_SUPPORT.md
examples/: advanced_training.rs  belief_tracking.rs  belief_tracking_fixed.rs  belief_tracking_simple.rs  cartpole_ppo.rs  cartpole_simple.rs  comprehensive_benchmark.rs  falling_object.rs  gpu_acceleration.rs  gpu_backward_test.rs  gpu_benchmark.rs  gpu_optimized.rs  gpu_simple.rs  gpu_test.rs  grid_navigation.rs  grid_navigation_v2.rs  masked_cartpole.rs  memory_efficient_training.rs  mnist_cnn.rs  monitoring_demo.rs  mountain_car_working.rs  nlp_embedding.rs  parallel_training.rs  pendulum_sac.rs  python_example.py  simple_benchmark.rs  tensorboard_logging.rs  validation_metrics.rs
examples/wasm/: index.html
logs/example_run/: dashboard.html  graph.txt  histograms.csv  scalars.csv
python/athena/: __init__.py
src/: agent.rs  agent_v2.rs  error.rs  lib.rs  macros.rs  memory_optimization.rs  network.rs  optimizer.rs  parallel.rs  replay_buffer.rs  replay_buffer_v2.rs  tutorials.rs
src/activations/: functions.rs  gelu.rs  mod.rs
src/agent/: dqn.rs  masked_agent.rs  mod.rs  traits.rs
src/algorithms/: a2c.rs  mod.rs  ppo.rs  sac.rs  td3.rs
src/belief/: belief_agent.rs  mod.rs  particle_filter.rs
src/bindings/: python.rs
src/builders/: layers.rs  mod.rs  network.rs  (+1 more)
tests/: benchmark_test.rs  gpu_tests.rs  integration_test.rs  property_tests.proptest-regressions  property_tests.rs
(+57 files in other folders)
