[package]
name = "athena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15", features = ["rayon", "serde"] }
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
numpy = { version = "0.20", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
python = ["pyo3", "numpy"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook"]

[dev-dependencies]
tempfile = "3.0"
num_cpus = "1.16"
criterion = "0.5"
proptest = "1.4"

[lib]
name = "athena"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "algorithm_comparison"
harness = false

[package.metadata.docs.rs]
logo = "assets/favicon.png"